# benzaiten

./: .env.dev  .env.example  .gitignore  README.md  astro.config.mjs  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package.json  readme.md  tsconfig.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_core_tables.sql  20240101000002_tags.sql  20240101000003_people.sql  20240101000004_release_status.sql  20240101000005_user_library.sql  20240101000006_images.sql  20240101000007_triggers.sql
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/extractors/: user.rs
backend/src/api/middleware/: auth.rs
backend/src/api/routes/: health.rs  images.rs  library.rs  mod.rs  tags.rs  works.rs
backend/src/application/: errors.rs  mod.rs
backend/src/application/dto/: library_dto.rs  mod.rs  person_dto.rs  tag_dto.rs  work_dto.rs
backend/src/application/services/: image_service.rs  library_service.rs  mod.rs  tag_service.rs  work_service.rs
backend/src/domain/entities/: image.rs  library_item.rs  mod.rs  person.rs  release_status.rs  tag.rs  work.rs
backend/src/domain/repositories/: library_repository.rs  mod.rs  person_repository.rs  tag_repository.rs  work_repository.rs
backend/src/domain/value_objects/: country_code.rs  media_status.rs  mod.rs  work_type.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/auth/: keycloak.rs
backend/src/infrastructure/database/postgres/: library_repository_impl.rs  mod.rs  person_repository_impl.rs  (+2 more)
backend/src/infrastructure/storage/: minio_client.rs
(+75 files in other folders)
