[package]
name = "benzaiten-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
